--- a/HTML/Practica2/style.css
+++ b/HTML/Practica2/style.css
@@ -12,7 +12,7 @@
 }
  
 #lateral{ 
-    width: 2000px; 
+    width: 200px; 
     float: left;
 } 
 
@@ -25,11 +25,12 @@
 #principal{ 
     background-color: #ffffff;  
     width: 330px; 
-    display: inline-block;
     text-align: center;
 } 
 
-
+.seccion {
+    display: inline-block;
+}
 
 /*
     Zona de pie de página
