--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -39,7 +39,7 @@ nav{
  }
  
  #background{
-   background-image : url("./img/books-wallpaper-5.jpg");
+   background-image : url("img/books-wallpaper-5.jpg");
    width: 100%;
    height: 400px;
  }
