--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -154,3 +154,11 @@ footer {
     margin-bottom: 30px;
     
 }
+
+.formulario ::-moz-placeholder{
+    color: black;
+}
+
+.formulario ::-webkit-input-placeholder{
+    color: black;
+}
