--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -5,7 +5,7 @@ nav{
  }
  nav ul {
    margin-top:0;
-   padding: 0 10px;
+   padding: 0 1%;
    display: inline-table;
    background: linear-gradient(top, #e0e0e0 0%, #686868 100%);
  }
@@ -14,12 +14,12 @@ nav{
     text-align: center;
     color:wheat;
     position: relative;
-    top: -50px;
+    top: -5.1%;
  }
  
  body {
-   padding: 0;
-   margin: 0;
+   padding: 0%;
+   margin: 0%;
  } 
  footer iframe {
    width: "100"; 
@@ -27,8 +27,8 @@ nav{
  
  }
  html {
-   margin-top:0;
-   padding:0;
+   margin-top:0%;
+   padding:0%;
  }
  
  
@@ -40,8 +40,9 @@ nav{
  
  #background{
    background-image : url("../img/books-wallpaper-5.jpg");
+   background-size : 100%;
    width: 100%;
-   height: 400px;
+   height: 80%;
  }
 
  .titulo-aventura{
@@ -58,34 +59,37 @@ nav{
  }
 
 .carousel .carousel-item{
-      visibility: visible;
+    visibility: visible;
+    width: 30%;
+    height: 10%;
 
 }
 
 .carousel-item img{
-    width:30%;
-    height:200px;
+    width:40%;
+    height:20%;
 }
 
 .tabs img{
-    width:200px;
-    height:300px;
+    width:20%;
+    height:30%;
+    size: 100%;
 }
 .tabul{
-    height:300px;
+    height:30%;
 }
 #libros-aventura{
-    height: 300px;
+    height: 30%;
 }
 
 #elemento-libro{
-    height:300px;
+    height:30%;
 }
 .tabs{
-    height:300px;
+    height:30%;
 }
 #libros{
-    height:350px;
+    height:35%;
 }
 
 #elemento-libro span{
@@ -108,50 +112,50 @@ nav{
     position: relative;
     overflow-x: auto;
     overflow-y: hidden;
-    height:80px;
+    height:8%;
     margin: auto;
 }
 #row-aventuras{
-    margin: 50px;
+    margin: 5%;
 }
 
 footer {
-    bottom:0px;
+    bottom:0%;
 }
 
 .col s3 m3 l3 xl3{
-    height: 300px;
+    height: 30%;
 }
 
 #id-circe{
-    height:340px;
+    height:34%;
 }
 
 #id-proposito{
-    height:385px;
+    height:38.5%;
 }
 
 #id-frontera{
-    height:340px;
+    height:34%;
 }
 
 #logo-pag{
     position:relative;
-    bottom: 25px;
-    width:150px;
-    height:120px;
+    bottom: 2.5%;
+    width:25%;
+    height:20%;
 }
 
 #nombres,#email {
 
     overflow-y: scroll;
-    height: 80px;
+    height: 8%;
     resize: none;
 }
 #boton_registro{
     
-    margin-left: 240px;
-    margin-bottom: 30px;
+    margin-left: 24%;
+    margin-bottom: 3%;
     
 }
 
@@ -165,14 +169,14 @@ footer {
 
 #submit, #reset{
     position: relative;
-    left: 200px;
+    left: 20%;
 }
 #texto-oblig{
     text-align: center;
 }
 
 .text-libro{
-    font-size: 30px
+    font-size: 200%;
 }
 [role="button"]:hover,
 [role="button"]:focus,
