--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -12,6 +12,7 @@ nav{
 
  h1{
     text-align: center;
+    font-size:300%;
     color:wheat;
     position: relative;
     top: -5.1%;
@@ -191,3 +192,35 @@ footer {
    background-color: white;
    color: navy;
 } 
+
+@media (max-width: 320px ){
+    p{
+        font-size: 50%;
+    }/*
+    .mi-iframe {
+        width: 200px;
+        height: 150px;
+    }*/
+}
+#miiframe{
+    width: 100%;
+    height: 100%;
+    
+
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+/* CSS pantalla 768px o superior */
+/*
+  @media (min-width: 768px) {
+  
+    .mi-iframe {
+      width: 500px;
+      height: 350px;
+    } 
+  
+  }*/
