--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -56,25 +56,25 @@ nav{
 
  #categorias{
    margin: auto;
-   width: 50%;
+   width: 60%;
  }
 
 .carousel .carousel-item{
     visibility: visible;
-    width: 30%;
+    width: 10%;
     height: 10%;
 
 }
 
 .carousel-item img{
-    width:40%;
-    height:20%;
+    width:100%;
+    height:100%;
 }
 
 .tabs img{
-    width:20%;
+    width:30%;
     height:30%;
-    size: 100%;
+    size: 10%;
 }
 .tabul{
     height:30%;
@@ -193,15 +193,36 @@ footer {
    color: navy;
 } 
 
-@media (max-width: 320px ){
+@media (max-width: 480px ){
     p{
         font-size: 50%;
-    }/*
-    .mi-iframe {
-        width: 200px;
-        height: 150px;
-    }*/
+    }
+    .tabs img{
+        width:100%;
+        height:100%;
+        size: 10%;
+    }
 }
+@media (max-width: 767px) {
+    p{
+        font-size: 50%;
+    }
+    .tabs img{
+        width:100%;
+        height:100%;
+        size: 10%;
+    }
+}
+@media (min-width: 768px) and (max-width: 1199px) { 
+    p{
+        font-size: 50%;
+    }
+    .tabs img{
+        width:25%;
+        height:25%;
+        size: 10%;
+    } 
+ }
 #miiframe{
     width: 100%;
     height: 100%;
