--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -33,17 +33,11 @@ nav{
  }
  
  
- footer iframe {
-   width: "100"; 
-   height: "75";
- 
- }
- 
  #background{
    background-image : url("../img/books-wallpaper-5.jpg");
    background-size : 100%;
    width: 100%;
-   height: 80%;
+   height: 20em;
  }
 
  .titulo-aventura{
@@ -79,16 +73,22 @@ nav{
 .tabul{
     height:30%;
 }
-#libros-aventura{
-    height: 30%;
-}
 
 #elemento-libro{
-    height:30%;
+    height:50%;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+}
+#elemento-libro img{
+  margin: 0;
+  padding: 0;
+  height: inherit;
 }
 .tabs{
     height:30%;
 }
+
 #libros{
     height:35%;
 }
@@ -109,15 +109,11 @@ nav{
     width:100%;
 }
 
-#elemento-libroo{
-    position: relative;
-    overflow-x: auto;
-    overflow-y: hidden;
-    height:8%;
-    margin: auto;
-}
 #row-aventuras{
     margin: 5%;
+}
+#row-policiaca{
+  margin: 5%;
 }
 
 footer {
@@ -140,11 +136,14 @@ footer {
     height:34%;
 }
 
+
+.brand-logo{
+    width: 30%;
+    height: inherit;
+}
 #logo-pag{
-    position:relative;
-    bottom: 2.5%;
-    width:25%;
-    height:20%;
+  width:inherit;
+  height: inherit;
 }
 
 #nombres,#email {
@@ -245,3 +244,120 @@ iframe {
     } 
   
   }*/
+
+  body {
+    -webkit-animation: bugfix infinite 1s;
+  }
+  
+  @-webkit-keyframes bugfix {
+    from {
+      padding: 0;
+    }
+    to {
+      padding: 0;
+    }
+  }
+  input[type=checkbox] {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  
+  label {
+    display: none;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  nav[role="custom-dropdown"] {
+    position: relative;
+    width: 100%;
+  }
+  @media screen and (max-width: 800px) {
+    html,
+    body {
+    margin: 0;
+  }
+
+    #descripcion{
+      font-size: 1em;
+    }
+    #direccion{
+      font-size:1em;
+    }
+    #sinopsis{
+      font-size:1em;
+    }
+    .titulo{
+      text-align: center;
+      font-size:2.5em;
+    }
+    #background{
+      width: 100%;
+      height: 10em;
+    }
+
+    .brand-logo{
+      width: inherit;
+      height: inherit;
+  }
+
+  #logo-pag{
+    width: 50%;
+    height: inherit;
+    position: relative;
+    right: 50%;
+  }
+
+  #elemento-libro{
+    height: inherit;
+    width: 30%;
+    display:block;
+  }
+
+  .titulo-policiaca{
+    text-align: left;
+  }
+  
+  #libros-policiaca #elemento-libro{
+    height: inherit;
+    width: 50%;
+  }
+    nav[role="custom-dropdown"] ul {
+      display: none;
+      height: 100%;
+    }
+    nav[role="custom-dropdown"] label {
+      position: relative;
+      display: block;
+      width: 100%;
+      min-height: 2.25em;
+      padding: .45em;
+      font-size: 1.1em;
+      margin: 0;
+    }
+    nav[role="custom-dropdown"] label:after {
+      position: absolute;
+      right: .25em;
+      top: 0;
+      content: "\2261";
+      font-size: 1.8em;
+    }
+    nav[role="custom-dropdown"] input[type=checkbox]:checked ~ label:after {
+      color: #222;
+    }
+    nav[role="custom-dropdown"] input[type=checkbox]:checked ~ ul {
+      display: block;
+    }
+    nav[role="custom-dropdown"] input[type=checkbox]:checked ~ ul > li {
+      width: 100%;
+      opacity: 50%;
+      text-align: left;
+    }
+    nav[role="custom-dropdown"] input[type=checkbox]:checked ~ ul > li:after {
+      position: absolute;
+      right: .25em;
+      content: "\203A";
+      font: bold 1.4em sans-serif;
+    }
+  }
