--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -231,7 +231,7 @@ footer {
 
 iframe {
     width: 100%;
-    height: 100%;
+    height: 25%;
   }
 
 /* CSS pantalla 768px o superior */
@@ -264,7 +264,7 @@ iframe {
   }
   
   label {
-    display: none;
+    /*display: none;*/
     cursor: pointer;
     user-select: none;
   }
