--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 nav{
    width: 100%;
    background-color: #abb2b9;
@@ -32,7 +41,27 @@ nav{
    padding:0%;
  }
  
+ .buscador-libro{
+   color: wheat;
+ }
  
+ ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #769DE8;
+  opacity: 1; /* Firefox */
+}
+
+.card-image{
+  height: 300px;
+  width: 100%;
+}
+.card:hover .card-image img {
+  width: 100%;
+  height: 100%;
+}
+.card-title{
+  text-align: center;
+  
+}
  #background{
    background-image : url("../img/books-wallpaper-5.jpg");
    background-size : 100%;
@@ -273,6 +302,23 @@ iframe {
     position: relative;
     width: 100%;
   }
+
+  ::-webkit-input-placeholder {
+    text-align: center;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+ }
+ 
+ ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+ }
+ 
+ :-ms-input-placeholder {  
+    text-align: center; 
+ }
+
   @media screen and (max-width: 800px) {
     html,
     body {
