--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -19,6 +19,9 @@ nav{
    background: linear-gradient(top, #e0e0e0 0%, #686868 100%);
  }
 
+ nav ul a{
+   font-size: 15px;
+ }
  h1{
     text-align: center;
     font-size:300%;
@@ -60,7 +63,7 @@ nav{
 }
 .card-title{
   text-align: center;
-  
+
 }
  #background{
    background-image : url("../img/books-wallpaper-5.jpg");
@@ -137,7 +140,10 @@ nav{
     position:relative;
     width:100%;
 }
-
+.row{
+  margin-right: 0;
+  margin-left: 0;
+}
 #row-aventuras{
     margin: 5%;
 }
