--- a/web/public/style/style.css
+++ b/web/public/style/style.css
@@ -18,6 +18,9 @@ nav{
    display: inline-table;
    background: linear-gradient(top, #e0e0e0 0%, #686868 100%);
  }
+.mapa-web{
+   color: #184FEB;
+ }
 
  nav ul a{
    font-size: 15px;
@@ -25,7 +28,7 @@ nav{
  h1{
     text-align: center;
     font-size:300%;
-    color:wheat;
+    color:#FE3C00;
     position: relative;
     top: -5.1%;
  }
@@ -45,7 +48,7 @@ nav{
  }
 
  .buscador-libro{
-   color: wheat;
+   color: #FE3C00;
  }
 
  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -267,6 +270,21 @@ nav{
         height:100%;
         size: 10%;
     }
+
+}
+@media (max-width: 1199px ){
+  #texto-oblig{
+    font-size:20px;
+  }
+  .anadir-form{
+    font-size: 15px;
+  }
+  .grey-text {
+    font-size:15px;
+  }
+  .lugar{
+    font-size:15px;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
     p{
